--- a/_data/payload_menu.yaml
+++ b/_data/payload_menu.yaml
@@ -1,7 +1,20 @@
-- label: Example Menu
+- label: Payload
   items:
-    - name: Menu item
-      link: /link/
+    - name: Recommended Payloads
+      link: /payload
       items:
-        - name: Sub menu item 
-          link: /sub-menu-item/
+        - name: Squire Envelope Outer Payload 
+          link: /payload/envelope
+        - name: Squire Common CT Inner Header 
+          link: /payload/common
+        - name: Squire Secured Inner Payload 
+          link: /payload/secured
+    - name: Other Payloads
+      link: /payload/custom
+      items:
+        - name: Custom outer & inner payloads 
+          link: /payload/outer
+        - name: Squire-compatible Inner Payload 
+          link: /payload/inner
+        - name: Squire simple Inner Payload 
+          link: /payload/simple
